--- a/authentication/templates/login.html
+++ b/authentication/templates/login.html
@@ -1,7 +1,13 @@
 {% extends 'base.html' %}
+{% load static %}
+
+{% block meta %}
+<link href="{% static 'style.css' %}" rel="stylesheet">
+{% endblock meta %}
 
 {% block content %}
-<div class="container w-50 content">
+<br>
+<div class="container w-lg-25 w-75 mt-5 content">
   <h3>Login</h3>
   <form method="POST" id="form">
     {% csrf_token %}
