--- a/templates/base.html
+++ b/templates/base.html
@@ -5,9 +5,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  {% block meta %}
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link href="{% static 'style.css' %}" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
     integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
@@ -17,112 +17,136 @@
     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
     integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+  {% block meta %}
+
   {% endblock meta %}
 </head>
 
 <body>
+  <div id="page-container">
+    <div id="content-wrap">
+      <nav class="navbar navbar-expand-lg fixed-top frosted-glass-nav px-3">
+        <div class="d-flex flex-grow-1">
+          <a class="navbar-brand d-inline-block fw-semibold" href="{% url 'frontpage:show_frontpage' %}">
+            <h3 class="m-0">Booker</h3>
+          </a>
+          <div class="text-right ms-auto">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#myNavbar">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+          </div>
+        </div>
+        <div class="collapse navbar-collapse flex-grow-1 text-right" id="myNavbar">
+          <ul class="navbar-nav ms-auto flex-nowrap">
+            {% if request.user.is_authenticated %}
+            <li class="nav-item">
+              <a href="#" class="nav-link text-black my-2 mx-lg-2 menu-item">Bookshelf</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link text-black my-2 mx-lg-2 menu-item">Donasi buku</a>
+            </li>
+            <li class="nav-item">
+              <div class="d-flex flex-row">
+                <p class="nav-link text-black my-2 mx-lg-2 menu-item"><span class="fas fa-user"></span>
+                  {{ request.user }}
+                </p>
+                <p class="nav-link text-black my-2 mx-lg-2 menu-item"><span class="fa fa-gem text-primary"></span>
+                  {{ request.user.points }}
+                </p>
+              </div>
+            </li>
+            <li class=" nav-item">
+              <a class="nav-link my-2 mx-lg-2 menu-item text-danger" href="{% url 'authentication:logout_user' %}"><span
+                  class="fas fa-sign-out-alt"></span>
+                Logout</a>
+            </li>
+            {% else %}
+            <li class="nav-item">
+              <a class="nav-link my-2 mx-lg-2 menu-item text-primary" href="{% url 'authentication:signup' %}"><span
+                  class="fas fa-user"></span> Daftar</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link my-2 mx-lg-2 menu-item text-success" href="{% url 'authentication:login_user' %}"><span
+                  class="fas fa-sign-in-alt"></span>
+                Login</a>
+            </li>
+            {% endif %}
+          </ul>
+        </div>
+      </nav>
+      <div class="p-3">
+        {% block content %}
 
-  <nav class="navbar navbar-expand-lg fixed-top frosted-glass-nav px-3">
-    <div class="d-flex flex-grow-1">
-      <a class="navbar-brand d-inline-block fw-semibold" href="{% url 'frontpage:show_frontpage' %}">
-        <h3 class="m-0">Booker</h3>
-      </a>
-      <div class="text-right ms-auto">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#myNavbar">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+        {% endblock content %}
       </div>
-
     </div>
-    <div class="collapse navbar-collapse flex-grow-1 text-right" id="myNavbar">
-      <ul class="navbar-nav ms-auto flex-nowrap">
-        {% if request.user.is_authenticated %}
-        <li class="nav-item">
-          <a href="#" class="nav-link text-black my-2 mx-lg-2 menu-item">Bookshelf</a>
-        </li>
-        <li class="nav-item">
-          <a href="#" class="nav-link text-black my-2 mx-lg-2 menu-item">Donasi buku</a>
-        </li>
-        <li class="nav-item">
-          <p class="nav-link text-black my-2 mx-lg-2 menu-item"><span class=" fas fa-user"></span> {{ request.user }}
-          </p>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link my-2 mx-lg-2 menu-item text-danger" href="{% url 'authentication:logout_user' %}"><span
-              class="fas fa-sign-out-alt"></span>
-            Logout</a>
-        </li>
-        {% else %}
-        <li class="nav-item">
-          <a class="nav-link my-2 mx-lg-2 menu-item text-primary" href="{% url 'authentication:signup' %}"><span
-              class="fas fa-user"></span> Daftar</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link my-2 mx-lg-2 menu-item text-success" href="{% url 'authentication:login_user' %}"><span
-              class="fas fa-sign-in-alt"></span>
-            Login</a>
-        </li>
-        {% endif %}
-      </ul>
-    </div>
-  </nav>
+    <!-- content wrap end -->
 
-  <div class="p-3">
-    {% block content %}
 
-    {% endblock content %}
+
+    <footer id="footer" class="text-center frosted-glass-footer pt-2">
+      <div class="text-center">
+        <p>Made with &#10084; by Kelompok B04 PBP 2023</p>
+      </div>
+    </footer>
   </div>
-  <footer class="text-center frosted-glass-footer">
-    <div class="text-center pt-3">
-      <p>Made with &#10084; by Kelompok B04 PBP 2023</p>
-    </div>
-  </footer>
-
 </body>
 
 <style>
   body {
-    height: auto;
-    width: auto;
-  }
-
-  body {
     background: #dde1e7;
   }
 
-  p {
-    color: black;
+  #page-container {
+    position: relative;
+    min-height: 100vh;
+  }
+
+  #content-wrap {
+    padding-bottom: 3rem;
+    /* Footer height */
+  }
+
+  #footer {
+    text-align: center;
+    justify-self: center;
+    position: absolute;
+    z-index: -1;
+    bottom: 0;
+    width: 100%;
+    height: 3rem;
+    /* Footer height */
   }
 
   .frosted-glass-nav {
     /* From https://css.glass */
-    background: rgba(179, 169, 169, 0.21);
+    background: rgba(100, 118, 149, 0.2);
     border-bottom-left-radius: 16px;
     border-bottom-right-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(5.1px);
     -webkit-backdrop-filter: blur(5.1px);
-    border: 1px solid rgba(179, 169, 169, 0.62);
+    border: 1px solid rgba(100, 118, 149, 0.3);
   }
 
   .frosted-glass-footer {
     /* From https://css.glass */
-    background: rgba(179, 169, 169, 0.21);
+    background: rgba(100, 118, 149, 0.2);
     border-top-left-radius: 16px;
     border-top-right-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(5.1px);
     -webkit-backdrop-filter: blur(5.1px);
-    border: 1px solid rgba(179, 169, 169, 0.62);
+    border: 1px solid rgba(100, 118, 149, 0.3);
   }
 
   .frosted-glass {
     /* From https://css.glass */
-    background: rgba(179, 169, 169, 0.21);
+    background: rgba(100, 118, 149, 0.2);
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(5.1px);
     -webkit-backdrop-filter: blur(5.1px);
-    border: 1px solid rgba(179, 169, 169, 0.62);
+    border: 1px solid rgba(100, 118, 149, 0.3);
   }
 
   .sticky-nav {
@@ -138,7 +162,6 @@
   }
 
   .content {
-    width: auto;
     background: #dde1e7;
     border-radius: 10px;
     padding: 40px 30px;
@@ -218,10 +241,4 @@
       inset -5px -5px 10px #ffffff73;
   }
 
-  .content:hover {
-    box-shadow: inset 2px 2px 5px #babecc,
-      inset -5px -5px 10px #ffffff73;
-  }
-</style>
-
-</html>
+  </html>
