--- a/authentication/templates/login.html
+++ b/authentication/templates/login.html
@@ -6,27 +6,26 @@
 {% endblock meta %}
 
 {% block content %}
-<br>
-<div class="container w-lg-25 w-75 mt-5 content">
+<br><br>
+<div class="container content w-lg-25 w-md-50 w-100 py-4 px-4 mt-5 m-2 mx-auto">
   <h3>Login</h3>
   <form method="POST" id="form">
     {% csrf_token %}
     <div class="mb-3 field">
-      <!-- <label for="username" class="col-form-label d-block">Username</label> -->
       <span class="fa fa-user ms-3"></span>
       <input required class="rounded ps-5" type="text" id="id_username" name="username" placeholder="Username...">
     </div>
 
     <div class="mb-3 field">
-      <!-- <label for="password" class="col-form-label d-block">Password</label> -->
       <span class="fa fa-lock ms-3"></span>
       <input required class="rounded ps-5" type="password" id="id_password" name="password" placeholder="Password...">
     </div>
+    {% if messages %}
+    {% for message in messages %}
+    <p>{{ message }}</p>
+    {% endfor %}
+    {% endif %}
     <input class="w-100" type="submit" value="Login"></input>
   </form>
 </div>
-
-<style>
-
-</style>
 {% endblock content %}
