--- a/templates/base.html
+++ b/templates/base.html
@@ -94,7 +94,8 @@
 
 <style>
   body {
-    background: #dde1e7;
+    background: rgb(221, 225, 231);
+    background: linear-gradient(25deg, rgba(221, 225, 231, 1) 94%, #d9dbff 100%);
   }
 
   #page-container {
@@ -164,7 +165,6 @@
   .content {
     background: #dde1e7;
     border-radius: 10px;
-    padding: 40px 30px;
     box-shadow: -3px -3px 7px #ffffff73,
       2px 2px 5px rgba(94, 104, 121, 0.288);
   }
@@ -236,9 +236,15 @@
   }
 
   button:hover,
-  input[type=submit]:focus {
+  input[type=submit]:hover {
     box-shadow: inset 2px 2px 5px #babecc,
       inset -5px -5px 10px #ffffff73;
   }
 
-  </html>
+  span.content:hover {
+    box-shadow: inset 2px 2px 5px #babecc,
+      inset -5px -5px 10px #ffffff73;
+  }
+</style>
+
+</html>
