--- a/frontpage/templates/frontpage.html
+++ b/frontpage/templates/frontpage.html
@@ -42,6 +42,12 @@
     -webkit-box-orient: vertical;
   }
 
+  .cards-container {
+    display: flex; 
+    flex-wrap: nowrap; 
+    overflow-x: auto;
+  }
+
   .searchbar {
     margin-bottom: auto;
     margin-top: auto;
