--- a/reviewbuku/templates/reviewbuku.html
+++ b/reviewbuku/templates/reviewbuku.html
@@ -3,7 +3,8 @@
 
 {% block content %}
 <div class="d-flex flex-column justify-content-center">
-  <h3 class="mx-auto center" style="margin-top: 4.5rem;">Peminjaman</h3>
+  <h3 class="mx-auto center" style="margin-top: 4.5rem;">Review</h3>
+  <p class="mx-auto center">Setelah mengirimkan review, kamu akan mendapat <b>10 poin</b></p>
   <div id="book_card" class="content book_card col-md-5 mt-3 mx-auto position-relative" style="padding: 1.1rem 1.5rem;">
     <div class="card-body h-100 d-flex flex-column">
       <div>
@@ -13,18 +14,16 @@
         <h6 class="card-subtitle text-light-emphasis mt-2">Genre: {{book.genre}}</h6>
       </div>
       <div class="mt-auto">
-        <p class="m-0 text-center">Durasi peminjaman (hari)</p>
-        <select id="durasi-select" class="form-select w-50 mx-auto mt-1" aria-label="Default select example">
-          <option selected value="1">1</option>
+        <p class="m-0 text-center">Rating kamu (1-5): </p>
+        <select id="rating-select" class="form-select w-50 mx-auto mt-1" aria-label="Default select example">
+          <option value="1">1</option>
           <option value="2">2</option>
           <option value="3">3</option>
           <option value="4">4</option>
-          <option value="5">5</option>
-          <option value="6">6</option>
-          <option value="7">7</option>
+          <option selected value="5">5</option>
         </select>
-        <button onclick="pinjam({{id}})" class="w-100 text-center mt-4">
-          Pinjam
+        <button onclick="review({{id}})" class="w-100 text-center mt-4">
+          Kirim review
         </button>
         <button onclick="history.back()" class="w-100 text-center mt-4">
           Kembali
@@ -37,13 +36,13 @@
 <script>
 
 
-  async function pinjam(id) {
-    durasi = document.getElementById('durasi-select').value
-    await fetch(`{% url 'pinjambuku:peminjaman' %}?id=${id}&durasi=${durasi}`).then((res) => {
+  async function review(id) {
+    rating = document.getElementById('rating-select').value
+    await fetch(`{% url 'reviewbuku:review' %}?id=${id}&rating=${rating}`).then((res) => {
       if (res.status === 201) {
         window.location.replace("{% url 'bookshelf:show_bookshelf' %}");
       } else {
-        alert("Gagal melakukan peminjaman")
+        alert("Gagal melakukan review")
       }
     })
   }
