--- a/authentication/templates/login.html
+++ b/authentication/templates/login.html
@@ -2,8 +2,7 @@
 {% load static %}
 
 {% block content %}
-<br><br>
-<div class="container content w-lg-25 w-md-50 w-100 py-4 px-4 mt-5 m-2 mx-auto">
+<div class="container content w-lg-25 w-md-50 w-100 py-4 px-4 mx-auto">
   <h3>Login</h3>
   <form method="POST" id="form">
     {% csrf_token %}
@@ -24,4 +23,11 @@
     <input class="w-100" type="submit" value="Login"></input>
   </form>
 </div>
+
+<style>
+  div .container {
+    margin-top: 6em;
+    margin-bottom: 1em;
+  }
+</style>
 {% endblock content %}
