--- a/templates/base.html
+++ b/templates/base.html
@@ -43,7 +43,9 @@
                 class="nav-link text-black my-2 mx-lg-2 menu-item">Bookshelf</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link text-black my-2 mx-lg-2 menu-item">Donasi buku</a>
+              <a href="{% url 'donasibuku:show_donasi_buku' %}"
+                class="nav-link text-black my-2 mx-lg-2 menu-item">Donasi
+                buku</a>
             </li>
             <li class="nav-item">
               <p class="nav-link text-black my-2 mx-lg-2 menu-item"><span class="fas fa-user"></span>
